<resources>
    <string name="app_name">My Assignment</string>
    <string name="mainGreeting">Welcome to my form!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="signature">Bell, Daniel 4/22/2018</string>
    <string name="submit">Submit</string>
    <string name="userAge">User, Age</string>
    <string name="defaultDescription">Description</string>
    <string name="returnToForm">return</string>
    <string name="flag">*</string>
    <string name="nameErrorMessage">Invalid Name. Name must be between 1 and 32 characters\n</string>
    <string name="Error">Error:\n</string>
    <string name="empty" />
    <string name="emailErrorMessage">Invalid email address\n</string>
    <string name="userNameErrorMessage">Invalid user name. User name must be between 1 and 32 characters\n</string>
    <string name="invalidDate">Invalid date\n</string>
    <string name="invalidAge">Those under 18 years of age are not permitted\n</string>
    <string name="occupation">Occupation</string>
    <string name="description">Describe yourself</string>
    <string name="occupationError">Invalid occupation. occupation must be between 1 and 32 characters\n</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="item_title">Jane Doe</string>
    <string name="search_radius">Search Radius</string>
    <string name="how_do_you_identify">How do you identify?</string>
    <string name="age_range">Age Range</string>
    <string name="to">To</string>
    <string name="set_profile_to_private">Set profile to private.</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="invalidRange">Invalid age range</string>
</resources>
